# GestionaleLogisticaUNIVPM

./: .env.example  .gitignore  CLAUDE.md  README.md  config.ini  pyproject.toml
.claude/: MEMORY.md
.github/: CODEOWNERS
dati_esempio/: Ordini_Expert_20260706.csv  Ordini_Expert_Nazionale.csv  Ordini_MediaWorld_20260706.csv  Ordini_Unieuro_20260706.csv  Ordini_Unieuro_Nazionale.csv
dati_test/: Ordini_MediaWorld_20260706.csv  Ordini_MediaWorld_Nazionale.csv  Ordini_Unieuro_20260706.csv
packaging/: build_macos.sh  build_windows.ps1  entry_point.py  gestionale.spec
scripts/: importa_csv.py  seed_dati_finti.py
sketch/: gui-design.sketch
tests/: conftest.py  test_autenticazione.py  test_autenticazione_page.py  test_button.py  test_camion_page.py  test_clustering.py  test_concorrenza_rnf3.py  test_config.py  test_dashboard_data.py  test_database_encryption.py  test_dipendenti_page.py  test_form_field.py  test_geocoding.py  test_gestore_camion.py  test_gestore_dipendenti.py  test_gestore_dipendenti_rf1.py  test_gestore_esiti.py  test_gestore_logistica_rf14.py  test_gestore_rendicontazione_rf19.py  test_gestore_squadre.py  test_import_ordini.py  test_link_button.py  test_logistica.py  test_modal.py  test_ordini_page.py  test_otp_input.py  test_ottimizzazione.py  test_page_header.py  test_pianificazione_data.py  test_registra_esito_modal.py  test_scheduler.py  test_sidebar.py  test_squadre_page.py  test_stima_durata.py  test_table.py  test_tooltip.py  test_viaggi_page.py  test_visualizza_consegne_transito.py  test_visualizza_risorse.py  test_visualizza_risorse_rf8.py
(+145 files in other folders)
