[project]
name = "gestionale-logistica"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.3",
    "bcrypt>=4.2.1",
    "fpdf2>=2.8.7",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pulp>=3.3.2",
    "pyside6>=6.11.1",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.9.0",
    "sqlalchemy>=2.0.51",
    "sqlcipher3-wheels>=0.5.7",
]

[project.scripts]
gestionale-logistica = "gestionale_logistica:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
